[package]
name = "mapx"
version = "0.1.0"
edition = "2021"
description = "Fast code context mapper for code aid tools"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
regex = "1"

[features]
ranker = ["dep:reqwest"]

[dependencies.reqwest]
version = "0.12"
optional = true
default-features = false
features = ["json", "blocking", "rustls-tls"]

[dev-dependencies]
tempfile = "3"
